[package]
name = "sakuin"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Sakuin (索引) — tantivy search index abstraction for Rust applications"
homepage = "https://github.com/pleme-io/sakuin"
repository = "https://github.com/pleme-io/sakuin"
readme = "README.md"
license = "MIT"
categories = ["database"]
keywords = ["tantivy", "search", "index", "full-text"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
tantivy = "0.22"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
